--- a/index.html
+++ b/index.html
@@ -5,24 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic-Tac-Toe Game</title>
     <link rel="stylesheet" href="css/index.css" />
+    <script
+      src="https://kit.fontawesome.com/3bfd3ce9e5.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <main>
-      <div class="grid">
-        <div class="turn"></div>
-        <div class="actions"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="score"></div>
-        <div class="score"></div>
-        <div class="score"></div>
+      <div class="grid" data-id="grid">
+        <!-- Turn indicator -->
+        <div class="turn" data-id="turn">
+          <i class="fa-solid fa-x turquoise"></i>
+          <p class="turquoise">Player 1, you're up!</p>
+        </div>
+
+        <!-- Dropdown menu -->
+        <div class="menu">
+          <button class="menu-btn" data-id="menu-btn">
+            Actions
+            <i class="fa-solid fa-chevron-down"></i>
+          </button>
+          <div class="items border hidden" data-id="menu-popover">
+            <button data-id="reset-btn">Reset</button>
+            <button data-id="new-round-btn">New Round</button>
+          </div>
+        </div>
+
+        <!-- Game board -->
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+        <div class="square shadow"></div>
+
+        <!-- Scoreboard -->
+        <div class="score shadow" style="background-color: var(--turquoise)">
+          <p>Player 1</p>
+          <span>Wins 0</span>
+        </div>
+        <div class="score shadow" style="background-color: var(--light-grey)">
+          <p>Ties</p>
+          <span>0</span>
+        </div>
+        <div class="score shadow" style="background-color: var(--yellow)">
+          <p>Player 2</p>
+          <span>Wins 0</span>
+        </div>
       </div>
     </main>
 
@@ -40,5 +72,13 @@
         >
       </p>
     </footer>
+
+    <!--Moal content-->
+    <div class="modal hidden">
+      <div class="modal-content">
+        <span>Player 1 Wins</span>
+        <button>Play Again</button>
+      </div>
+    </div>
   </body>
 </html>
